Add routes for index, radio

--- a/src/view/index/index.html
+++ b/src/view/index/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Node.js Radio</title>
+    <title>Seafarers' Cafe Radio</title>
 </head>
 <body>
-    <div id='radio'>
-        <audio id="audio" src="/stream" preload="none" controls autoplay></audio>
-    </div>
+    <h1>This website is in progress. Soon there'll be a login screen here</h1>
+    <form>
+        
+    </form>
 </body>
