Add script for error msgs

--- a/src/view/index/index.html
+++ b/src/view/index/index.html
@@ -4,6 +4,12 @@
     <title>Seafarers' Cafe Radio</title>
 </head>
 <body>
+    <script>
+        // This is an example of how error handling will be implemented for failed requests
+        const params = new URLSearchParams(window.location.search);
+        const msg = params.get("msg");
+        console.log(msg);
+    </script>
     <h1>This website is in progress. Soon there'll be a login screen here</h1>
     <form>
         
