Expanded CRUD scaffolding

--- a/src/view/admin/backgrounds/create.html
+++ b/src/view/admin/backgrounds/create.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Create Background</title>
         <!-- TODO: Implement style, finish aesthetics, add form option for moods -->
         <!-- <link rel="stylesheet" href="mystyle.css">  -->
+        <title>Create Background</title>
+        <link rel="stylesheet" href="/public/css/styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
     </head>
