--- a/src/view/admin/backgrounds/read.html
+++ b/src/view/admin/backgrounds/read.html
@@ -1,3 +1,15 @@
-<!-- use vue to pull data from this method and display it 
-    /db/backgrounds/:id
-</form> -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <!-- use vue to pull data from this method and display it 
+        /db/backgrounds/:id
+        </form> -->
+        <title>View Background</title>
+        <link rel="stylesheet" href="/public/css/styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
+    </head>
+    <body>
+
+    </body>
+</html>
