--- a/src/view/admin/backgrounds/delete.html
+++ b/src/view/admin/backgrounds/delete.html
@@ -3,14 +3,14 @@
     <head>
         <!-- Use vue to pull data and display it for this object, then prompt if the user actually wants to delete it
         action="/db/backgrounds/:id" method="delete"
-        </form> -->
+        </form>-->
         <title>Delete Background</title>
         <link rel="stylesheet" href="/public/css/styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
     </head>
     <body>
-        <form action="/db/backgrounds/:id" method="delete" enctype="multipart/form-data">
+        <form action="/db/backgrounds/:id" method="delete">
             <label for="submit">Are you sure you want to delete this?</label><br>
             <input id="submit" type="submit" value="Yes">
             <a href="/admin/backgrounds">No</a>
