--- a/src/view/index/index.html
+++ b/src/view/index/index.html
@@ -9,15 +9,15 @@
 <body>
     <h1>Seafarers' Cafe Radio Test</h1>
     <h2 id="error"></h2>
-    <div id="login-form">
+    <div id="data-form">
         <h3>Login</h3>
-        <div class="login-fields">
+        <div class="data-fields">
             <form action="/login" method="post">
-                <input class="login-input-style" type="text" id="username" name="username" placeholder="Username"/><br>
+                <input class="data-input-style" type="text" id="username" name="username" placeholder="Username"/><br>
 
-                <input class="login-input-style" type="password" id="password" name="password" placeholder="Password"/><br><br>
+                <input class="data-input-style" type="password" id="password" name="password" placeholder="Password"/><br><br>
 
-                <input class="login-button-style" class="login-input-style" type="submit" value="Submit">
+                <input class="data-button-style" class="login-input-style" type="submit" value="Submit">
             </form>
         </div>
         <p>New user? <a href="/register">Register</a></p>
