--- a/src/view/index/register.html
+++ b/src/view/index/register.html
@@ -9,17 +9,20 @@
 <body>
     <h1>Registration:</h1>
     <h2 id="error"></h2>
-    <div id="login-form">
+    <div id="data-form">
         <h3>Register</h3>
-        <div class="login-fields">
+        <div class="data-fields">
             <form action="/register/create" method="post">
-                <input class="login-input-style" type="text" id="username" name="username" placeholder="Username"/><br>
-                <label for="username">Please enter a username with the decided upon constraints.</label><br>
-                <input class="login-input-style" type="text" id="email" name="email" placeholder="email@example.com"/><br>
-                <label for="username">Please enter a valid username that is authorized.</label><br>
-                <input class="login-input-style" type="password" id="password" name="password" placeholder="Password"/><br>
-                <label for="username">Please enter a password with the decided upon constraints.</label><br><br>
-                <input class="login-button-style" type="submit" value="Submit">
+                <input class="data-input-style" type="text" id="username" name="username" placeholder="Username"/><br>
+                <label for="username">(greater than 4 characters, no special symbols ex. !@#$%^)</label><br><br>
+
+                <input class="data-input-style" type="text" id="email" name="email" placeholder="email@example.com"/><br>
+                <label for="username">(must be in email format and pre-approved by an admin)</label><br><br>
+
+                <input class="data-input-style" type="password" id="password" name="password" placeholder="Password"/><br>
+                <label for="username">(minimum 7 characters)</label><br><br>
+
+                <input class="data-button-style" type="submit" value="Submit">
             </form>
         </div>
         <p>Have an account? <a href="/">Login</a></p>
