Updated format for PUT, DELETE to POST calls

--- a/src/view/admin/backgrounds/create.html
+++ b/src/view/admin/backgrounds/create.html
@@ -38,7 +38,7 @@
         <div id="data-form">
             <h3>New Background</h3>
             <div class="data-fields">
-                <form action="/db/backgrounds" method="post" enctype="multipart/form-data">
+                <form action="/db/backgrounds/create" method="post" enctype="multipart/form-data">
                     <input class="data-input-style" type="text" id="author" name="author" placeholder="Artist name"/><br>
                     <label for="author">(name of the artist who created this background)</label><br><br>
 
