Fixed missing background color

--- a/src/view/admin/backgrounds/create.html
+++ b/src/view/admin/backgrounds/create.html
@@ -58,8 +58,8 @@
                     <input class="data-button-style" type="submit" value="Submit">
                 </form>
             </div>
-            <p>Have an account? <a href="/">Login</a></p>
-            <p>Note: Registration emails must be pre-approved for access!</p>
+            <p>Backgrounds change for users after a song finishes playing.</p>
+            <p>Backgrounds will attempt to be selected based on a matching mood associated with the song being played.</p>
         </div>
     </body>
 </html>
