--- a/src/view/index/index.html
+++ b/src/view/index/index.html
@@ -20,7 +20,7 @@
                 <input class="data-button-style" class="login-input-style" type="submit" value="Submit">
             </form>
         </div>
-        <p>New user? <a href="/register">Register</a></p>
+        <p><br><br>New user? <a href="/register">Register</a></p>
     </div>
 </body>
 <script>
