--- a/src/view/admin/backgrounds/delete.html
+++ b/src/view/admin/backgrounds/delete.html
@@ -1,19 +1,60 @@
-<!DOCTYPE html>
-<html>
-    <head>
         <!-- Use vue to pull data and display it for this object, then prompt if the user actually wants to delete it
         action="/db/backgrounds/:id" method="delete"
         </form>-->
+<!DOCTYPE html>
+<html>
+    <head>
         <title>Delete Background</title>
         <link rel="stylesheet" href="/public/css/styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
+        <script src="/vue"></script>
+        <script>
+            window.onload = function(){
+                var pageUrl = window.location.href.trim();
+                var lastIndex = pageUrl.lastIndexOf("/");
+                var backgroundId = parseInt(pageUrl.substring(lastIndex + 1));
+
+                const Data = {
+                    data(){
+                        return {
+                            background: {},
+                            mood: ""
+                        }
+                    },
+                    created() {
+                        this.fetchData();
+                    },
+                    methods: {
+                        async fetchData() {
+                            this.background = await fetch(new Request('/db/backgrounds/' + backgroundId)).then(response => {return response.json()});
+                            this.mood = await fetch(new Request('/db/moods/' + this.background.moodId)).then(response => {return response.json()});
+                        }
+                    }
+                }
+                Vue.createApp(Data).mount('.data-fields');
+            }
+        </script>
     </head>
     <body>
-        <form action="/db/backgrounds/:id" method="delete">
-            <label for="submit">Are you sure you want to delete this?</label><br>
-            <input id="submit" type="submit" value="Yes">
-            <a href="/admin/backgrounds">No</a>
-        </form> 
+        <h1>Delete background:</h1>
+        <h2 id="error"></h2>
+        <div id="data-form">
+            <h3>Are you sure you want to delete this background?</h3>
+            <div class="data-fields">
+                <div class="data">
+                    <p>Name: {{background.filename}}</p>
+                    <p>Author: {{background.author}}</p>
+                    <p>Source: <a v-bind:href="background.source">{{background.source}}</a></p>
+                    <p>Mood: {{mood.name}}</p>
+                </div>
+                <form action="/db/backgrounds/delete" method="post" enctype="multipart/form-data">
+                    <input type="hidden" id="id" name="id" v-bind:value="background.id"><br>
+                    <input class="data-button-style" type="submit" value="Yes">
+                </form>
+                <p><br><br>Change your mind? <a href="/admin/backgrounds">Go back</a></p>
+            </div>
+        </div>
     </body>
 </html>
+        
