--- a/src/view/admin/backgrounds/create.html
+++ b/src/view/admin/backgrounds/create.html
@@ -11,50 +11,40 @@
                 const Moods = {
                     data(){
                         return {
-                            selected: '',
                             moods: []
                         }
                     },
                     mounted() {
                         fetch(new Request('/db/moods/all')).then(response => response.json())
                             .then(response => { response.forEach(mood => {
-                                    this.moods.push({text: mood.name, value:mood.id});
+                                    this.moods.push({text: mood.name, id:mood.id});
                                 });
                             });
-                        this.selected = this.moods[0].text;
                     }
                 }
                 Vue.createApp(Moods).mount('#moods');
-
-                const params = new URLSearchParams(window.location.search);
-                const msg = params.get("msg");
-                document.getElementById("error").textContent=msg;
             }
         </script>
     </head>
     <body>
         <h1>Create a background:</h1>
-        <h2 id="error"></h2>
         <div id="data-form">
             <h3>New Background</h3>
             <div class="data-fields">
                 <form action="/db/backgrounds/create" method="post" enctype="multipart/form-data">
                     <input class="data-input-style" type="text" id="author" name="author" placeholder="Artist name"/><br>
                     <label for="author">(name of the artist who created this background)</label><br><br>
-
                     <input class="data-input-style" type="text" id="source" name="source" placeholder="URL"/><br>
                     <label for="author">(link to the website this background originated from)</label><br><br>
-
                     <input class="data-input-style" type="file" id="file" name="file" placeholder="Upload"/><br>
                     <label for="file">(image/animation to be uploaded)</label><br><br>
-
                     <select v-model="moods" id="moods" name="mood">
-                        <option v-for="mood in moods" v-bind:value="mood.value">
+                        <option disabled value="">Please select one</option>
+                        <option v-for="mood in moods" v-bind:value="mood.id">
                             {{ mood.text }}
                         </option>
                     </select><br>
                     <label for="moods">What mood best captures this background:</label><br><br>
-
                     <input class="data-button-style" type="submit" value="Submit">
                 </form>
             </div>
