--- a/src/view/radio/radio.html
+++ b/src/view/radio/radio.html
@@ -10,6 +10,8 @@
         <img src="img.jpg">
     </picture>
     <div id='radio'>
-        <audio id="audio" src="/radio/stream" preload="none" controls autoplay></audio>
+        <audio controls autoplay>
+            <source id="audio" src="/radio/stream" preload="none">
+        </audio>
     </div>
 </body>
