--- a/src/view/admin/playlists/read.html
+++ b/src/view/admin/playlists/read.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>View Background</title>
+        <title>View Playlist</title>
         <link rel="stylesheet" href="/public/css/styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
@@ -10,14 +10,13 @@
             window.onload = function(){
                 var pageUrl = window.location.href.trim();
                 var lastIndex = pageUrl.lastIndexOf("/");
-                var backgroundId = parseInt(pageUrl.substring(lastIndex + 1));
+                var playlistId = parseInt(pageUrl.substring(lastIndex + 1));
 
                 const Data = {
                     data(){
                         return {
-                            background: {},
-                            mood: {},
-                            img_link: "/db/backgrounds/img/" + backgroundId
+                            playlist: {},
+                            songs: []
                         }
                     },
                     created() {
@@ -25,8 +24,13 @@
                     },
                     methods: {
                         async fetchData() {
-                            this.background = await fetch(new Request('/db/backgrounds/' + backgroundId)).then(response => {return response.json()});
-                            this.mood = await fetch(new Request('/db/moods/' + this.background.moodId)).then(response => {return response.json()});
+                            this.playlist = await fetch(new Request('/db/playlist/' + playlistId)).then(response => {return response.json()});
+                            
+                            for (i = 0; i < this.playlist.songs.length; i++){
+                                let mood = await fetch(new Request('/db/moods/' + this.playlist.songs[i].moodId)).then(response => {return response.json()});
+                                this.songs.push({id: this.playlist.songs[i].id, title: this.playlist.songs[i].title, mood: mood.name});
+                            }
+                            console.log(this.playlist.songs);
                         }
                     }
                 }
@@ -35,18 +39,20 @@
         </script>
     </head>
     <body>
-        <h1>View background:</h1>
+        <h1>View Playlist:</h1>
         <div id="data-form">
-            <h3>Background preview</h3>
+            <h3>Playlist preview</h3>
             <div class="data-fields">
                 <div class="data">
-                    <img v-bind:src="img_link">
-                    <p>Name: {{background.filename}}</p>
-                    <p>Author: {{background.author}}</p>
-                    <p>Source: <a v-bind:href="background.source">{{background.source}}</a></p>
-                    <p>Mood: {{mood.name}}</p>
+                    <p>Name: {{playlist.playlist.name}}</p>
+                    <ul>
+                        <li v-for="song in songs">
+                            {{song.title}}
+                            {{song.artist}}
+                        </li>
+                    </ul>
                 </div>
-                <p><br><a href="/admin/backgrounds">Go back</a></p>
+                <p><br><a href="/admin/playlists">Go back</a></p>
             </div>
         </div>
     </body>
