Implemented customized CRUD for playlists

--- a/src/view/admin/backgrounds/create.html
+++ b/src/view/admin/backgrounds/create.html
@@ -35,7 +35,7 @@
                     <input class="data-input-style" type="text" id="author" name="author" placeholder="Artist name"/><br>
                     <label for="author">(name of the artist who created this background)</label><br><br>
                     <input class="data-input-style" type="text" id="source" name="source" placeholder="URL"/><br>
-                    <label for="author">(link to the website this background originated from)</label><br><br>
+                    <label for="source">(link to the website this background originated from)</label><br><br>
                     <input class="data-input-style" type="file" id="file" name="file" placeholder="Upload"/><br>
                     <label for="file">(image/animation to be uploaded)</label><br><br>
                     <select v-model="moods" id="moods" name="mood">
