--- a/src/view/admin/backgrounds/update.html
+++ b/src/view/admin/backgrounds/update.html
@@ -58,7 +58,7 @@
                     <input class="data-input-style" type="text" id="author" name="author" v-bind:placeholder="background.author"/><br>
                     <label for="author">(updated name of the artist who created this background)</label><br><br>
                     <input class="data-input-style" type="text" id="source" name="source" v-bind:placeholder="background.source"/><br>
-                    <label for="author">(updated link to the website this background originated from)</label><br><br>
+                    <label for="source">(updated link to the website this background originated from)</label><br><br>
                     <select id="moods" name="mood">
                         <option disabled value="">Please select one</option>
                         <option v-for="mood in moods" v-bind:value="mood.id">
